ERR
  Cell In[45], line 13
    new_block = textwrap.dedent(r'''
                                ^
SyntaxError: incomplete input
